--- a/Vel608G-Project1.html
+++ b/Vel608G-Project1.html
@@ -100,31 +100,38 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
+												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - 205M</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Designing, Poducing Coding an Arduino Uno</a></li>
+												<li><a href="#">Soup Robot</a></li>
+												<li><a href="#">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+                                        <li>
+											<span class="opener">Team Spark</span>
+											<ul>
+												<li><a href="#">Technical Drawings of CV-joint, axle´s and differential</a></li>
+												<li><a href="#">FEA analysis of an Upright</a></li>
+												<li><a href="#">3D Printing and topology optimizing an upright</a></li>
+											</ul>
+										</li>
+                                        <li>
+											<span class="opener">Personal Projects</span>
+											<ul>
+												<li><a href="#">Týr´s Hand Mk2</a></li>
+											</ul>
+										</li>
+										<li><a href="#">CV</a></li>
 									</ul>
 								</nav>
 
