--- a/index.html
+++ b/index.html
@@ -48,66 +48,6 @@
 									</span>
 								</section>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ipsum sed dolor</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="Vel608G/Project1.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
-
-						</div>
-					</div>
-
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
@@ -119,7 +59,6 @@
 									</form>
 								</section>
 
-							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
@@ -136,28 +75,28 @@
 											</ul>
 										</li>
 										<li>
-											<span class="opener">Tölvustýrður Vélbúnaður - 205M</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - Vél205M</span>
 											<ul>
-												<li><a href="#">Designing, Poducing Coding an Arduino Uno</a></li>
-												<li><a href="#">Soup Robot</a></li>
-												<li><a href="#">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
+												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
+												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
+												<li><a href="VEL205M-TyrsHand.html">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
 											</ul>
 										</li>
                                         <li>
 											<span class="opener">Team Spark</span>
 											<ul>
-												<li><a href="#">Technical Drawings of CV-joint, axle´s and differential</a></li>
-												<li><a href="#">FEA analysis of an Upright</a></li>
-												<li><a href="#">3D Printing and topology optimizing an upright</a></li>
+												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
+												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
+												<li><a href="TeamSpark-3D&Topology.html">3D Printing and topology optimizing an upright</a></li>
 											</ul>
 										</li>
                                         <li>
 											<span class="opener">Personal Projects</span>
 											<ul>
-												<li><a href="#">Týr´s Hand Mk2</a></li>
+												<li><a href="TyrsHandMk2.hmtl">Týr´s Hand Mk2</a></li>
 											</ul>
 										</li>
-										<li><a href="#">CV</a></li>
+										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
 
