--- a/Vel608G-Project1.html
+++ b/Vel608G-Project1.html
@@ -65,8 +65,7 @@
                                     <span class="image main"><img src="images/Github%20page.png" alt="" /></span>
                                     
                                     <h3>Changing the Website</h3>
-									<p>I started with changing the code in index.html<p>
-                                    <p>There I made copies of generic.html file to Vel608G-Project1.html and Vel608G-Project2.html etc. for later projects. Then I changed the sidebar so it would have a subbar for this course and other courses im attending. After that I added a picture in Project 1.<p>
+                                    <p>I started with making copies of generic.html file and changed the name to Vel608G-Project1.html for this project and then Vel608G-Project2.html etc. for later projects. Then I changed the sidebar so it would have a subbar for this course and other courses im attending and personal projects. After that I added a picture in Project 1.<p>
                                     <p>Then I changed the homepage and added an introdutcion.<p>
                                     
                                     <h3>CV</h3>
@@ -93,7 +92,6 @@
 									</form>
 								</section>
 
-							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
@@ -110,28 +108,28 @@
 											</ul>
 										</li>
 										<li>
-											<span class="opener">Tölvustýrður Vélbúnaður - 205M</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - Vél205M</span>
 											<ul>
-												<li><a href="#">Designing, Poducing Coding an Arduino Uno</a></li>
-												<li><a href="#">Soup Robot</a></li>
-												<li><a href="#">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
+												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
+												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
+												<li><a href="VEL205M-TyrsHand.html">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
 											</ul>
 										</li>
                                         <li>
 											<span class="opener">Team Spark</span>
 											<ul>
-												<li><a href="#">Technical Drawings of CV-joint, axle´s and differential</a></li>
-												<li><a href="#">FEA analysis of an Upright</a></li>
-												<li><a href="#">3D Printing and topology optimizing an upright</a></li>
+												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
+												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
+												<li><a href="TeamSpark-3D&Topology.html">3D Printing and topology optimizing an upright</a></li>
 											</ul>
 										</li>
                                         <li>
 											<span class="opener">Personal Projects</span>
 											<ul>
-												<li><a href="#">Týr´s Hand Mk2</a></li>
+												<li><a href="TyrsHandMk2.hmtl">Týr´s Hand Mk2</a></li>
 											</ul>
 										</li>
-										<li><a href="#">CV</a></li>
+										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
 
