--- a/Vel608G-Project1.html
+++ b/Vel608G-Project1.html
@@ -58,7 +58,7 @@
                                     <p>Next I downloaded the template Editorial for the website on <a href="https://html5up.net/">HTML5 UP</a> and started setting up my website. I chose Editorial template because it has a sidebar i can costomize and i like the style.</p>
                                     
                                     <h3>Github</h3>
-									<p>I started with signing up in github and seting up a new Repository under the name Personal-Portolio. To upload the files from Bracket to Github i simply dragged and dropped the files to the repository.<p>
+									<p>I started with signing up in github and setting up a new Repository under the name Personal-Portolio. To upload the files from my computer to Github i simply dragged and dropped the files to the repository.<p>
                                     <span class="image main"><img src="images/github1.png" alt="" /></span>
                                     <span class="image main"><img src="images/Github%20rep.png" alt="" /></span>
                                     <p>After that I went into "Settings" in the Github Repository and clicked the "Pages" tab. There I changed the Source from "none" to "main" and saved. With that my page is in online. :))<p>
@@ -133,41 +133,16 @@
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>You can contact me via email or by phone</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="jthgunnarsson@gmail.com">jthgunnarsson@gmail.com</a></li>
+										<li class="icon solid fa-phone">(+354) 841-8086</li>
 									</ul>
 								</section>
 
