--- a/Vel608G-Project3.html
+++ b/Vel608G-Project3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>3D Printing og Scanning</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -35,34 +35,78 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Generic</h1>
+										<h1>3D Printing og Scanning</h1>
 									</header>
-
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-
-								</section>
+                                    <h2>Designing the spoonholder for my creatine</h2>
+                                    <p>I decided to 3D print somekind of a holder that would hold my scoop that i use for my creatine. The reason for that is that I was tired of having to rummage through my creatine can to get the scoop. The creatine powder would both get on my fingers and it was annoying to have to look for the spoon.</p>
+                                    <span class="image main"><img src="images/skeid1.jpg" alt="" /></span>
+                                    <p>The requirements I set for myself were that the spoon has to be in the can, it has to be convenient to reach the scoop and it has to be easy to move the holder from can to can as the creatine can run out and if I buy another doll I have to I don't pour all the creatine powder into the bucket with the holder.</p>
+                                    <p>The design I came up with was a holder that attaches to the wall of the housing with magnets. I started buying 2 12mmx3mm magnets.</p>
+                                    <span class="image main"><img src="images/segull.jpg" alt="" /></span>
+                                    <p>Next I used Solidworks to design the holder. The design I came up with can be seen in the image below.</p>
+                                    <span class="image main"><img src="images/haldari.png" alt="" /></span>
+                                    <p>This design is very convenient as it is very easy to reach the scoop and because it is very small, the 3D printing takes no time.</p>
+                                    <h2>Slicer</h2>
+                                    <p>The printer I decided to use was a <a href="https://www.prusa3d.com/product/original-prusa-i3-mk3s-kit-3/?gad=1&gclid=CjwKCAjwx_eiBhBGEiwA15gLN7zipv83uASDwISy243krnwipPUqqhxSE29Hb98CgY4jSPG8bjn-5RoCVX0QAvD_BwE">Prusa MK3</a>Prusa MK3. In order to print I had to download <a href="https://www.prusa3d.com/page/prusaslicer_424/">Prusaslicer</a> which converts .stl files into g-code that the printer can understand. Next I made a .stl file of the holder and transferred to Prusaslicer. There chose to have the item print on its back and have supports only from the build plate, i had to have somekind of support for the bridge that holds the scoop but i didn´t want any support to be in the slot for the magnet. I did a 30% Infill and supports on buildplate only and the base print settings, 0.15mm quality, and PLA filament. Then i sliced the part by clicking the slice button. Next, I took the sd card that was in the printer itself and inserted it into my computer. Then I was able to save the g-code from my computer to the sd card and then put it back into the printer. Overall it took 15 min. to print. </p>
+                                    <span class="image main"><img src="images/g-kodi.png" alt="" /></span>
+                                    <p>Þetta er niðurstaðan</p>
+                                    <span class="image main"><img src="images/haldari2.jpg" alt="" /></span>
+                                    <span class="image main"><img src="images/haldari3.jpg" alt="" /></span>
+                                    <span class="image main"><img src="images/haldari4.jpg" alt="" /></span>
+                                    <a href="Verkefni3%20-%203dprentun.zip">Here</a> you can download the project files.
+                                    <h2>problems with 3D printing</h2>
+                                    <p>I had to print the creatine holder 3 times as the opening for the magnet was not big enough. It turns out that the plastic expands by 3% during the printing itself which messed with the tolerences. So I enlarged the opening by 0.5mm which was a good fit. But then I realized that the bow that holds the spoon itself is the exact width of the spoon so I made it bigger and longer.</p>
+                                    <h2>3D scanning</h2>
+                                    <p>The object I decided to 3D scan is a dnd figurine I painted a long time ago.</p>
+                                    <span class="image main"><img src="images/owlbear.jpg" alt="" /></span>
+                                    <p> I used Scaniverse which is an app on my phone to scan the item as some of my fellow students recommended that app. To start scanning I chose new scan>small object. The way the app works is that it uses both the lidar scanner built into the phone and the camera to scan. What I think Scaniverse does better than other apps is that it records video instead of the person having to take countless photos.</p>
+                                    <h2>Result of the 3D scan</h2>
+                                    <p>The video here below is the result.</p>
+                                    <video width="1000" height="600" autoplay muted loop>
+                                    <source src="images/Owlbear.mp4" type="video/mp4">
+                                    <source src="movie.ogg" type="video/ogg">
+                                    </video>
+                                    <h2>Timetable</h2>
+                                    <table>
+  <tr>
+    <th>Project Section</th>
+    <th>Description</th>
+    <th>Time</th>
+  </tr>
+  <tr>
+    <td>3D Design</td>
+    <td>Design and drawing</td>
+    <td>2 hours</td>
+  </tr>
+  <tr>
+    <td>Testing</td>
+    <td>Testing the 3D printer</td>
+    <td>1 hour</td>
+  </tr>
+  <tr>
+    <td>3D Print</td>
+    <td>3D Printing</td>
+    <td>1 hour</td>
+  </tr>
+ <tr>
+    <td>3D Scan</td>
+    <td>3D scanning an object</td>
+    <td>1 hour</td>
+  </tr>
+  <tr>
+    <td>Documantation</td>
+    <td>Documenting on website</td>
+    <td>3 hours</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>8 hours</td>
+  </tr>
+</table>
+                                    <p>The project took alot less time then i predicted because the object that i 3D printed was so small and thus it took very little time to print. Along with that, I had already decided  which program to use for the 3D scan. Otherwise, the project went very well and there were no major problems like in the previous project :).</p>
+								</div>
+							</section>
 
 						</div>
 					</div>
@@ -78,76 +122,57 @@
 									</form>
 								</section>
 
-							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
+												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - Vél205M</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
+												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
+												<li><a href="VEL205M-TyrsHand.html">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+                                        <li>
+											<span class="opener">Team Spark</span>
+											<ul>
+												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
+												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
+												<li><a href="TeamSpark-3D&Topology.html">3D Printing and topology optimizing an upright</a></li>
+											</ul>
+										</li>
+                                        <li>
+											<span class="opener">Personal Projects</span>
+											<ul>
+												<li><a href="TyrsHandMk2.hmtl">Týr´s Hand Mk2</a></li>
+											</ul>
+										</li>
+										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>You can contact me via email or by phone</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="jthgunnarsson@gmail.com">jthgunnarsson@gmail.com</a></li>
+										<li class="icon solid fa-phone">(+354) 841-8086</li>
 									</ul>
 								</section>
 
@@ -167,6 +192,3 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
