--- a/Vel608G-Project2.html
+++ b/Vel608G-Project2.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -35,36 +35,87 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Generic</h1>
-									</header>
-
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-
-								</section>
-
-						</div>
+										<h1>Computer-aided Cutting</h1>
+                                    </header>
+									<p>This project is divided into two parts. Using the vinyl cutter and lazer cutter.</p>
+                                    <h2>Vinyl</h2>
+                                    <p>I found a picture on google of a Ferrari Formula 1 car that i put into <a href="https://inkscape.org/">inkscape</a>. By using Path>Bitmap Trace and changing the threshold to 0.600 i changed the picture to black.</p>
+                                    <span class="image main"><img src="images/ferrari.png" alt="" /></span>
+                                    <p>Then I moved the picture to a computer that was connected to the vinyl cutter and from there I changed the picture to an pdf.file. My teacher, Hafliði helped me with setting up the vinyl cutter by adjusting and tightening the wheels so that the vinyl would stay still. Finally everything was ready and it was time to cut. This was the final result.</p>
+                                    <span class="image main"><img src="images/vinyl.jpg" alt="" /></span>
+                                    <h2>Kerf test</h2>
+                                    <p>To determine how much kerf the laser cutter should have, we had to test it. I did the test with Aron Beck and Tómas Ingi. In order to determine the kerf, we cut ten boxes and measured the length of the boxes and then the hole in the plastic from which the boxes were cut.</p>
+                                    <p>The length of the hole was 9.9mm and the combined length of the boxes was 9.69mm. Then we got that our system is (9.9-9.69)/11=0.019mm but I round it to 0.020mm. </p>
+                                    <span class="image main"><img src="images/kerf.jpg" alt="" /></span>
+                                    <h2>CAD design</h2>
+                                    <p>The program i chose to use was <a href="https://www.solidworks.com/">Solidworks</a>.
+                                    I decided to lazer cut an office drawer for my small tools. I started by measuring the longest tool, which is my dial gauge, and used that as a basis for how big the drawer should be. I ended up making it 250mm long, 100mm wide and 50mm high and then offset all sides with the kerf, 0.020mm.</p>
+                                    <span class="image main"><img src="images/assembly.png" alt="" /></span>
+                                    <h2>
+                                    Parametric Design
+                                    </h2>
+                                    <p>To make an parametric design i used design table in solidworks.</p>
+                                    <iframe width="420" height="315" src="https://www.youtube.com/embed/YV5BSSArjjU"> </iframe>
+                                    <p>I started with opening the tab configuration. There is one configuration in the file named “Default”.
+                                    From there i inserted a design table by going into Insert>Tables>Excel Design Table and used "auto-create". Then i could chose a dimension of a line in the sketch and make cuple of variants.</p>
+                                    <span class="image main"><img src="images/parameter.png" alt="" /></span>
+                                    <p>It is pretty useful to use the parametric design table if i wanted to increase the volume of the drawer but for now i will stick with the base design.</p>
+                                    <h2>Inkscape</h2>
+                                    <p>After I finished drawing all the sides of the drawer, I converted them to a .dxf file and transferred to inkscape. Then I changed the line thickness to 0.02 and changed the paper size to 500mmx500mm by going to File => Document Properties. </p>
+                                    <span class="image main"><img src="images/inkscape1.png" alt="" /></span>
+                                    <h2>Lazer cutting</h2>
+                                    <p>The material I chose was 3mmx500mmx500mm black acrylic plastic. In the lazer cutter itself I had to place the drawing from inkscape. So in the settings I set autofocus and 20% speed, 100% power, 100% frequency and 3mm thickness. After that I had to open the vacuum valve and press the play button.</p>
+                                    <span class="image main"><img src="images/lazerskerari.jpg" alt="" /></span>
+                                    <h2>Post Production Mess</h2>
+                                    <p>After the laser cutting, I found that in some places I could not put the drawer together, mainly on the front and back. Then my teacher pointed out that the kerf was supposed to be 0.2mm not 0.02mm. Then i found out after looking in solidworks that i made a mistake wich fixed my original mistake with the kerf where i made it 0.2mm,the correct amound, but in some places it was still 0.02mm. I could have avoided this headache by experimenting with the laser cutter I have in mind for the future. But this was easily fixed by filing the sides down a bit.</p>
+                                    <h2>Results</h2>
+                                    <p>Here are the results.</p>
+                                    <span class="image main"><img src="images/final_sk%C3%BAffa.jpg" alt="" /></span>
+                                    <p>And <a href="Skuffa.zip">here</a> are the cad files.</p>
+                                    <table>
+  <tr>
+    <th>Project Section</th>
+    <th>Description</th>
+    <th>Time</th>
+  </tr>
+  <tr>
+    <td>Vinyl</td>
+    <td>Find picture, adjust in inkscape and print.</td>
+    <td>1 hour.</td>
+  </tr>
+  <tr>
+    <td>Kerf test</td>
+    <td>Find length of kerf</td>
+    <td>0.5 hours.</td>
+  </tr>
+  <tr>
+    <td>3D design</td>
+    <td>Design and drawing</td>
+    <td>6 hours.</td>
+  </tr>
+  <tr>
+    <td>Parameter</td>
+    <td>Adding parameter to the design</td>
+    <td>2 hours.</td>
+  </tr>
+ <tr>
+    <td>Lazer cutting</td>
+    <td>Setting up in inkscape and lazer cutting</td>
+    <td>1 hour.</td>
+  </tr>
+  <tr>
+    <td>Documentation</td>
+    <td>Documentation on website</td>
+    <td>5 hours.</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>13.5 hours.</td>
+  </tr>
+</table>
+								</div>
+							</section>
 					</div>
 
 				<!-- Sidebar -->
@@ -78,76 +129,57 @@
 									</form>
 								</section>
 
-							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Tölvustudd Framleiðsla - Vél608G</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="Vel608G-Project1.html">Project 1 - The Website</a></li>
+												<li><a href="Vel608G-Project2.html">Project 2 - Lazercutting</a></li>
+												<li><a href="Vel608G-Project3.html">Project 3 - 3D-printing and 3D-scan</a></li>
+												<li><a href="Vel608G-FinalProject.html">Final Project</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - Vél205M</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
+												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
+												<li><a href="VEL205M-TyrsHand.html">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+                                        <li>
+											<span class="opener">Team Spark</span>
+											<ul>
+												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
+												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
+												<li><a href="TeamSpark-3D&Topology.html">3D Printing and topology optimizing an upright</a></li>
+											</ul>
+										</li>
+                                        <li>
+											<span class="opener">Personal Projects</span>
+											<ul>
+												<li><a href="TyrsHandMk2.hmtl">Týr´s Hand Mk2</a></li>
+											</ul>
+										</li>
+										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>You can contact me via email or by phone</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="jthgunnarsson@gmail.com">jthgunnarsson@gmail.com</a></li>
+										<li class="icon solid fa-phone">(+354) 841-8086</li>
 									</ul>
 								</section>
 
@@ -167,6 +199,3 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
