--- a/Vel608G-Project1.html
+++ b/Vel608G-Project1.html
@@ -108,7 +108,7 @@
 											</ul>
 										</li>
 										<li>
-											<span class="opener">Tölvustýrður Vélbúnaður - Vél205M</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - 205M</span>
 											<ul>
 												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
 												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
@@ -120,13 +120,6 @@
 											<ul>
 												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
 												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
-												<li><a href="TeamSpark-3D&Topology.html">3D Printing and topology optimizing an upright</a></li>
-											</ul>
-										</li>
-                                        <li>
-											<span class="opener">Personal Projects</span>
-											<ul>
-												<li><a href="TyrsHandMk2.hmtl">Týr´s Hand Mk2</a></li>
 											</ul>
 										</li>
 										<li><a href="CV.html">CV</a></li>
