--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 										<header>
 											<h2>Hi my name is Jónas Þór Gunnarsson and welcome to my Portfolio</h2>
 										</header>
-										<p>I am a mechanical engineering student and im will finish my Bachalors Degree this spring. During all my studies i have participated in the Formula Student team of the university, Team Spark. This website is intented as a personal portfolio.</p>
+										<p>I have a Bachalors Degree in mechanical engineering from the University of Iceland. During all my studies i have participated in the Formula Student team of the university, Team Spark. This website is intented as a personal portfolio.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">CV</a></li>
 										</ul>
@@ -75,7 +75,7 @@
 											</ul>
 										</li>
 										<li>
-											<span class="opener">Tölvustýrður Vélbúnaður - Vél205M</span>
+											<span class="opener">Tölvustýrður Vélbúnaður - 205M</span>
 											<ul>
 												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
 												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
@@ -87,54 +87,23 @@
 											<ul>
 												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
 												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
-												<li><a href="TeamSpark-3D&Topology.html">3D Printing and topology optimizing an upright</a></li>
-											</ul>
-										</li>
-                                        <li>
-											<span class="opener">Personal Projects</span>
-											<ul>
-												<li><a href="TyrsHandMk2.hmtl">Týr´s Hand Mk2</a></li>
 											</ul>
 										</li>
 										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
+
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>You can contact me via email or by phone</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="jthgunnarsson@gmail.com">jthgunnarsson@gmail.com</a></li>
+										<li class="icon solid fa-phone">(+354) 841-8086</li>
 									</ul>
 								</section>
 
@@ -154,6 +123,3 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
