--- a/CV.html
+++ b/CV.html
@@ -39,7 +39,7 @@
 									</header>
 									<span class="image"><img src="images/cv.jpg" alt="" /></span>
                                     <h2>About me</h2>
-									<p>My name is Jónas Þór Gunnarsson and I am a 3rd year student in mechanical engineering in the University of Iceland. I am efficient and solution-oriented who can both work indepentendtly as well in a team. Along with my studies, I have been doing fitness and music.</p>
+									<p>My name is Jónas Þór Gunnarsson and I´ve just finished my B.Sc. in mechanical engineering in the University of Iceland. I am efficient and solution-oriented who can both work indepentendtly as well in a team. Along with my studies, I have been doing fitness and music.</p>
                                     <h2>Education</h2>
                                     <h3>University of Iceland</h3>
 									<p>Mechanical Engineering BSc - August 2020 - Mai 2023</p>
@@ -47,6 +47,13 @@
 									<p>Eðlisfræðibraut 2 - August 2018 - Mai 2020</p>
                                     
                                     <h2>Career</h2>
+                                    <h3>Hefring Marine</h3>
+                                    <p>Intern, summer - Mai 2023 - Current</p>
+									<p>Used Python to design software that measures
+                                    impact and vibration of a ship (Whole Body Vibrations) to
+                                    reduce injuries to fishermen at sea.</p>
+                                    <p>Created a survey for seafarers and interviewed veterans from the US Coast Guard to
+                                    better identify the problems of the project.</p>
                                     <h3>Toyota í Kauptúni</h3>
                                     <p>Consultant in the Parts Department, summer and part-time - Mai 2021 - January 2023</p>
 									<p>Took orders for spare parts orders customers, individuals and companies, took customer appointments for inspections and repairs, assisted with their more general requestes and was at the counter. Worked in most jobs such as warehouse jobs to consultant and salesman. </p>
@@ -68,7 +75,7 @@
                                     
                                     <h3>Computer Skills</h3>
                                     <p>Very expirienced of CAD programs - Autodesk Inventor, DS SolidWorks, Fusion 360</p>
-                                    <p>Good knowledge of the Python programming language</p>
+                                    <p>Very good knowledge of the Python programming language</p>
                                     <p>Good knowledge of MATLAB</p>
                                     <p>Good knowledge of Excel</p>
                                     <p>Good knowledge in FEA programs - ANSYS</p>
@@ -100,7 +107,6 @@
 									</form>
 								</section>
 
-							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
@@ -119,64 +125,34 @@
 										<li>
 											<span class="opener">Tölvustýrður Vélbúnaður - 205M</span>
 											<ul>
-												<li><a href="#">Designing, Poducing Coding an Arduino Uno</a></li>
-												<li><a href="#">Soup Robot</a></li>
-												<li><a href="#">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
+												<li><a href="VEl205M%20-%20Arduino.html">Designing, Poducing Coding an Arduino Uno</a></li>
+												<li><a href="VEL205M-SoupRobot.html">Soup Robot</a></li>
+												<li><a href="VEL205M-TyrsHand.html">Prototyping a Prostetic Hand - Týr´s Hand</a></li>
 											</ul>
 										</li>
                                         <li>
 											<span class="opener">Team Spark</span>
 											<ul>
-												<li><a href="#">Technical Drawings of CV-joint, axle´s and differential</a></li>
-												<li><a href="#">FEA analysis of an Upright</a></li>
-												<li><a href="#">3D Printing and topology optimizing an upright</a></li>
+												<li><a href="TeamSpark-TechnicalDrawing.html">Technical Drawings of CV-joint, axle´s and differential</a></li>
+												<li><a href="TeamSpark-FEA_Upright.html">FEA analysis of an Upright</a></li>
 											</ul>
 										</li>
-                                        <li>
-											<span class="opener">Personal Projects</span>
-											<ul>
-												<li><a href="#">Týr´s Hand Mk2</a></li>
-											</ul>
-										</li>
-										<li><a href="#">CV</a></li>
+										<li><a href="CV.html">CV</a></li>
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
+
+
 
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>You can contact me via email or by phone</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="jthgunnarsson@gmail.com">jthgunnarsson@gmail.com</a></li>
+										<li class="icon solid fa-phone">(+354) 841-8086</li>
 									</ul>
 								</section>
 
@@ -196,6 +172,3 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
