--- a/VEL205M-TyrsHand.html
+++ b/VEL205M-TyrsHand.html
@@ -69,6 +69,9 @@
                                     <source src="images/hond1.mp4" type="video/mp4">
                                     <source src="movie.ogg" type="video/ogg">
                                     </video>
+                                    <p></p>
+                                    <a href="Hond%20Tyrs.zip">Here</a> you can download the project files.
+                                    <p></p>
 								</section>
 
 						</div>
