--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										</header>
 										<p>I have a Bachalors Degree in mechanical engineering from the University of Iceland. During all my studies i have participated in the Formula Student team of the university, Team Spark. This website is intented as a personal portfolio.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">CV</a></li>
+											<li><a href="CV.html" class="button big">CV</a></li>
 										</ul>
 									</div>
 									<span class="image object">
