--- a/VEl205M - Arduino.html
+++ b/VEl205M - Arduino.html
@@ -24,11 +24,6 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -39,7 +34,7 @@
 									</header>
                                     <span class="image main"><img src="images/Arduino6.jpg" alt="" /></span>
                                     <h3>Preperations</h3>
-									<p>Ég worked with Arnari, Gunnari og Tómasi.</p>
+									<p>I worked with Arnari, Gunnari og Tómasi.</p>
                                     <p>The project consists of designing a circuit, manufacturing it, programming and learning to use input and output devices.</p>
                                     
                                     <h3>Design and Production of Circuits</h3>
