--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -38,7 +33,7 @@
 										<header>
 											<h2>Hi my name is Jónas Þór Gunnarsson and welcome to my Portfolio</h2>
 										</header>
-										<p>I have a Bachalors Degree in mechanical engineering from the University of Iceland. During all my studies i have participated in the Formula Student team of the university, Team Spark. This website is intented as a personal portfolio.</p>
+										<p>I have a Bachalors Degree in Mechanical Engineering from the University of Iceland. During my studies i have participated in the Formula Student team of the University, Team Spark. This website is intented as a personal portfolio.</p>
 										<ul class="actions">
 											<li><a href="CV.html" class="button big">CV</a></li>
 										</ul>
