--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 										<header>
 											<h2>Hi my name is Jónas Þór Gunnarsson and welcome to my Portfolio</h2>
 										</header>
-										<p>I have a Bachalors Degree in Mechanical Engineering from the University of Iceland. During my studies i have participated in the Formula Student team of the University, Team Spark. This website is intented as a personal portfolio.</p>
+										<p>I have a Bachelors Degree in Mechanical Engineering from the University of Iceland. During my studies i participated in the Formula Student team, Team Spark. This website is intented as a personal portfolio.</p>
 										<ul class="actions">
 											<li><a href="CV.html" class="button big">CV</a></li>
 										</ul>
